tests/cases/parser/misc/double_hash.stderr
error: expected a macro invocation, however received a `#`
 --> $DIR/double_hash.hash:3:7
2 |   
3 |   k := ##naughty_intrinsic();
  |         ^ 
  = help: expected either `identifier`, or `[`
